Update guest label and improve HTML formatting
Changed the guest team label from 'GUEST' to 'Away' for clarity. Improved HTML formatting and indentation for better readability.

--- a/index.html
+++ b/index.html
@@ -1,15 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
+        integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=BBH+Bartle&family=Orbitron:wght@400..900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=BBH+Bartle&family=Orbitron:wght@400..900&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <title> Basketball scoreboard </title>
 </head>
+
 <body>
     <main class="container">
         <section class="sec-one">
@@ -23,7 +28,7 @@
                 <h5 class="period-counter">0</h5>
             </div><!-- timer -->
             <div class="guest">
-                <h3 class="guest-title">GUEST</h3>
+                <h3 class="guest-title">AWAY</h3>
                 <h1 class="guest-score">00</h1>
             </div><!-- guest -->
         </section><!-- end of section one -->
@@ -56,4 +61,5 @@
 
     <script src="js/score.js"></script>
 </body>
+
 </html>
