Refactor timer logic and update button attributes
Removed unused data-value attributes from play/pause and reset buttons in index.html. Refactored timer logic in score.js to improve readability and functionality, including pause/start button handling and period counter updates.

--- a/index.html
+++ b/index.html
@@ -40,11 +40,10 @@
                 <button data-value="3">+3</button>
             </div>
             <div class="pause-start">
-                <button class="pause-start-btn" data-value="playPause">
+                <button class="pause-start-btn">
                     <i class="fa-solid fa-play"></i>
-                    <!-- <i class="fa-solid fa-circle-pause"></i> -->
                 </button>
-                <button class="reset-btn" data-value="reset">
+                <button class="reset-btn">
                     <i class="fa-solid fa-circle-stop"></i>
                 </button>
             </div><!-- Pause / start buttons -->
